replace with List.of better for performance